--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5"
+    "@babel/preset-env": "^7.9.5",
+    "firebase": "^7.14.2",
+    "firebase-admin": "^8.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.6",
